--- a/Copia_de_Code_Test_23.ipynb
+++ b/Copia_de_Code_Test_23.ipynb
@@ -114,7 +114,7 @@
     "## Paso 1\n",
     "Carga los datos del fichero housing_train.csv que guardado en la carpeta sample_data en un data frame de Spark.\n",
     "\n",
-    "Se hace uso de la cabecera \"header\", ya que los datos vienen con cabeceras, además se usa \"inferSchema\" ya que permite que a cada columna, se le asigne el mejor tipo de dato."
+    "Se hace uso del argumento \"header\", ya que los datos vienen con cabeceras, además se usa \"inferSchema\" ya que permite que a cada columna, se le asigne el mejor tipo de dato."
    ],
    "metadata": {
     "id": "yEXjKRmG_JzZ"
@@ -123,13 +123,33 @@
   {
    "cell_type": "code",
    "source": [
-    "data = spark.read.csv(\"sample_data/housing_train.csv\", header=True, inferSchema=True)"
+    "df = spark.read.csv(\"sample_data/housing_train.csv\", header=True, inferSchema=True)\n",
+    "df.columns\n",
+    "df.show(5)"
    ],
    "metadata": {
     "id": "ArZY3tFPoknh"
    },
-   "execution_count": 4,
-   "outputs": []
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
+      "|longitude|latitude|housing_median_age|total_rooms|total_bedrooms|population|households|median_income|median_house_value|\n",
+      "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
+      "|  -114.31|   34.19|              15.0|     5612.0|        1283.0|    1015.0|     472.0|       1.4936|           66900.0|\n",
+      "|  -114.47|    34.4|              19.0|     7650.0|        1901.0|    1129.0|     463.0|         1.82|           80100.0|\n",
+      "|  -114.56|   33.69|              17.0|      720.0|         174.0|     333.0|     117.0|       1.6509|           85700.0|\n",
+      "|  -114.57|   33.64|              14.0|     1501.0|         337.0|     515.0|     226.0|       3.1917|           73400.0|\n",
+      "|  -114.57|   33.57|              20.0|     1454.0|         326.0|     624.0|     262.0|        1.925|           65500.0|\n",
+      "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,13 +162,87 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Se extrae el 20% de los datos haciendo uso de la función \"[sample](https://spark.apache.org/docs/3.1.2/api/python/reference/api/pyspark.sql.DataFrame.sample.html)\", que junto a su argumento \"fraction\" permite escoger el porcentaje de datos que se quiere extraer de forma ***aleatoria***, sin embargo para poder reproducir el ejercicio de forma exacta, se añade el argumento \"seed\"."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "source": [],
+   "source": [
+    "muestra_df = df.sample(fraction=0.2, seed=1)"
+   ],
    "metadata": {
     "id": "vDpVZla3okHZ"
    },
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Para obtener un dataframe con el resto de datos, se hace usode la función \"[exceptAll](https://spark.apache.org/docs/3.1.3/api/python/reference/api/pyspark.sql.DataFrame.exceptAll.html)\"."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "resto_df = df.exceptAll(muestra_df)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "A continuación se unen ambos df, haciendo uso de la función \"[union](https://spark.apache.org/docs/latest/api/python/reference/pyspark.sql/api/pyspark.sql.DataFrame.union.html)\", la cual permite realizar un merge entre dos dataframe."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "muestra_and_resto = muestra_df.union(resto_df)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Finalmente, para comprobar que no se ha producido ninguna pérdida durante el proceso, se comprueba la longitud tanto del dataframe inicial, como el resultado tras unir ambos dataframe. Además puede darse el caso de que durante el proceso se duplique una fila y se pierda otra, nos encontrariamos en el caso en el que la primera comprobación indicaría que todo esta bien, ya que tienen el mismo número de fila, pero esto puede deverse a que tenemos la duplicada. Es por ello que con la función \"[distinct](https://spark.apache.org/docs/3.1.2/api/python/reference/api/pyspark.sql.DataFrame.distinct.html)\", evitamos que esto ocurra."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "if muestra_and_resto.count() == df.count() and muestra_and_resto.distinct().count() == df.distinct().count():\n",
+    "    print(\"No hay pérdidas ni duplicados al unir los DataFrames\")\n",
+    "else:\n",
+    "    print(\"Se han perdido o duplicado registros al unir los DataFrames\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -159,15 +253,6 @@
    "metadata": {
     "id": "orHHrNyBIJ0e"
    }
-  },
-  {
-   "cell_type": "code",
-   "source": [],
-   "metadata": {
-    "id": "RxZZYpk5ITen"
-   },
-   "execution_count": null,
-   "outputs": []
   },
   {
    "cell_type": "markdown",
