--- a/Copia_de_Code_Test_23.ipynb
+++ b/Copia_de_Code_Test_23.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -55,49 +55,10 @@
     "id": "g-vtskBr5mt4",
     "outputId": "ac236ce3-47b2-49b7-c651-867553416043"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pyspark\r\n",
-      "  Using cached pyspark-3.3.2.tar.gz (281.4 MB)\r\n",
-      "  Preparing metadata (setup.py) ... \u001B[?25ldone\r\n",
-      "\u001B[?25hCollecting py4j==0.10.9.5\r\n",
-      "  Using cached py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\r\n",
-      "Building wheels for collected packages: pyspark\r\n",
-      "  Building wheel for pyspark (setup.py) ... \u001B[?25ldone\r\n",
-      "\u001B[?25h  Created wheel for pyspark: filename=pyspark-3.3.2-py2.py3-none-any.whl size=281824010 sha256=68617fc2cd11585ceeb8e4d1aa2a5fdc588da517c2ebc364466f224d9f8c04c9\r\n",
-      "  Stored in directory: /home/anavarro/.cache/pip/wheels/05/fa/3e/2e840e7c1bb33325381b6b3b0e55a1c9c3e0485d2ca469229d\r\n",
-      "Successfully built pyspark\r\n",
-      "Installing collected packages: py4j, pyspark\r\n",
-      "Successfully installed py4j-0.10.9.5 pyspark-3.3.2\r\n",
-      "\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip available: \u001B[0m\u001B[31;49m22.3.1\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m23.0.1\u001B[0m\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\r\n",
-      "23/03/14 15:22:38 WARN Utils: Your hostname, LAP-120-anavarro resolves to a loopback address: 127.0.1.1; using 192.168.18.172 instead (on interface wlo1)\n",
-      "23/03/14 15:22:38 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/03/14 15:22:39 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install pyspark\n",
-    "!pip install pyspark\n",
+    "#!pip install pyspark\n",
     "# Import SparkSession\n",
     "from pyspark.sql import SparkSession\n",
     "# Create a Spark Session\n",
@@ -105,7 +66,7 @@
     "# Check Spark Session Information\n",
     "spark\n",
     "# Import a Spark function from library\n",
-    "from pyspark.sql.functions import col"
+    "from pyspark.sql.functions import col, max"
    ]
   },
   {
@@ -130,7 +91,7 @@
    "metadata": {
     "id": "ArZY3tFPoknh"
    },
-   "execution_count": 12,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -178,7 +139,7 @@
    "metadata": {
     "id": "vDpVZla3okHZ"
    },
-   "execution_count": null,
+   "execution_count": 23,
    "outputs": []
   },
   {
@@ -192,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "resto_df = df.exceptAll(muestra_df)"
@@ -212,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "muestra_and_resto = muestra_df.union(resto_df)"
@@ -232,8 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 26,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No hay pérdidas ni duplicados al unir los DataFrames\n"
+     ]
+    }
+   ],
    "source": [
     "if muestra_and_resto.count() == df.count() and muestra_and_resto.distinct().count() == df.distinct().count():\n",
     "    print(\"No hay pérdidas ni duplicados al unir los DataFrames\")\n",
@@ -258,20 +227,112 @@
    "cell_type": "markdown",
    "source": [
     "## Paso 4\n",
-    "Partiendo del data frame del primer paso. Obtén el registro que más al norte esté según el número de habitaciones que tenga. Es decir, el registro más al norte entre todos los registros con una sola habitación, el más al norte entre todos los registros de dos habitaciones, y así sucesivamente. "
+    "Partiendo del data frame del primer paso. Obtén el registro que más al norte esté según el número de habitaciones que tenga. Es decir, el registro más al norte entre todos los registros con una sola habitación, el más al norte entre todos los registros de dos habitaciones, y así sucesivamente."
    ],
    "metadata": {
     "id": "bSs_E_ZqIYU8"
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Se obtiene el número máximo de habitación en el dataframe"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "source": [],
+   "execution_count": 45,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número máximo de habitaciones:  6445.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_bedrooms = df.select(max(\"total_bedrooms\")).collect()[0][0]\n",
+    "print(\"Número máximo de habitaciones: \", max_bedrooms)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "A continuación, por cada número de habitaciones, se coge del dataframe inicial, todas las filas que tenga el mismo número de habitaciones y de ellas, se escoge la habitación más al norte, es decir, ordenando de manera descendiente y cogiendo la primera fila."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "selected_records = []\n",
+    "# Se recorren todos los número de habitaciones que hay\n",
+    "for num_bedrooms in range(1, int(max_bedrooms)+1):\n",
+    "    # Seleccionar los registros con el número de habitaciones actual\n",
+    "    records = df.filter(col(\"total_bedrooms\") == num_bedrooms)\n",
+    "    # Encontrar el registro con la latitud más alta\n",
+    "    selected_record_list = records.orderBy(\"latitude\", ascending=False).limit(1).collect()\n",
+    "    # Se comprueba que al menos exista un registro para dicho número de habitación\n",
+    "    if selected_record_list:\n",
+    "        # Si la lista no está vacía, obtener el primer elemento\n",
+    "        selected_record = selected_record_list[0]\n",
+    "        # Añadir el registro seleccionado a la lista\n",
+    "        selected_records.append(selected_record)"
+   ],
    "metadata": {
     "id": "-pYFshAQJ1dJ"
    },
-   "execution_count": null,
+   "execution_count": 56,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Finalmente, se convierte la lista a un dataframe de spark"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
+      "|longitude|latitude|housing_median_age|total_rooms|total_bedrooms|population|households|median_income|median_house_value|\n",
+      "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
+      "|   -122.5|   37.79|              52.0|        8.0|           1.0|      13.0|       1.0|      15.0001|          500001.0|\n",
+      "|  -117.79|   35.21|               4.0|        2.0|           2.0|       6.0|       2.0|        2.375|          137500.0|\n",
+      "|  -122.37|    37.6|              26.0|       15.0|           3.0|      11.0|       3.0|        5.048|          350000.0|\n",
+      "|  -121.47|   38.51|              52.0|       20.0|           4.0|      74.0|       9.0|        3.625|           80000.0|\n",
+      "|  -121.96|   37.13|              26.0|       50.0|           5.0|      17.0|       4.0|      15.0001|          400000.0|\n",
+      "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_resultado= spark.createDataFrame(selected_records)\n",
+    "df_resultado.columns\n",
+    "df_resultado.show(5)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
