--- a/Copia_de_Code_Test_23.ipynb
+++ b/Copia_de_Code_Test_23.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -55,7 +55,31 @@
     "id": "g-vtskBr5mt4",
     "outputId": "ac236ce3-47b2-49b7-c651-867553416043"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/03/15 09:10:31 WARN Utils: Your hostname, LAP-120-anavarro resolves to a loopback address: 127.0.1.1; using 192.168.18.172 instead (on interface wlo1)\n",
+      "23/03/15 09:10:31 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/03/15 09:10:31 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "# Install pyspark\n",
     "#!pip install pyspark\n",
@@ -72,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import time\n",
@@ -105,7 +129,7 @@
    "metadata": {
     "id": "ArZY3tFPoknh"
    },
-   "execution_count": 96,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -153,7 +177,7 @@
    "metadata": {
     "id": "vDpVZla3okHZ"
    },
-   "execution_count": 97,
+   "execution_count": 5,
    "outputs": []
   },
   {
@@ -167,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "resto_df = dataset_inicial.exceptAll(muestra_df)"
@@ -187,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "muestra_and_resto = muestra_df.union(resto_df)"
@@ -207,13 +231,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 3:>                                                          (0 + 2) / 2]\r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "No hay pérdidas ni duplicados al unir los DataFrames\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -248,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "def super_plot(df1, df2):\n",
@@ -426,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "def select_records_by_num_bedrooms_v2(df):\n",
@@ -435,8 +473,10 @@
     "                             .groupBy(\"total_rooms\")\n",
     "                             .agg(max(col(\"latitude\")).alias(\"max_latitude\"))\n",
     "                             .withColumnRenamed(\"total_rooms\", \"total_rooms_y\"))\n",
+    "\n",
     "    # Se une el DataFrame original con los registros más al norte para cada grupo\n",
-    "    joined_df = dataset_inicial.join(max_latitude_by_rooms, (dataset_inicial.latitude==max_latitude_by_rooms.max_latitude) & (dataset_inicial.total_rooms == max_latitude_by_rooms.total_rooms_y))\n",
+    "    joined_df = dataset_inicial.join(max_latitude_by_rooms, (dataset_inicial.latitude==max_latitude_by_rooms.max_latitude) & (dataset_inicial.total_rooms == max_latitude_by_rooms.total_rooms_y), )\n",
+    "\n",
     "    # Se selecciona solo las columnas deseadas y ordenar por número de habitaciones\n",
     "    result_df = (joined_df\n",
     "                 .select(\"longitude\", \"latitude\", \"housing_median_age\", \"total_rooms\", \"total_bedrooms\", \"population\",\n",
@@ -530,13 +570,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tiempo de ejecución de la función optimizada:  0.03104400634765625\n",
+      "Tiempo de ejecución de la función optimizada:  0.08734774589538574\n",
       "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
       "|longitude|latitude|housing_median_age|total_rooms|total_bedrooms|population|households|median_income|median_house_value|\n",
       "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
@@ -809,9 +849,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Además, podemos calcular el precio de la casa dependiendo que tan al norte se encuentre:\n",
-    "    - Redondea hacía abajo en función de la latitude, 37.2 y 37.5, se encuentran dentro del mismo grupo\n",
-    "    - Aplicando la media en función de la altitud"
+    "Finalmente un dato muy interesante, es ver el valor medio de la casa en función de los años que tiene."
    ],
    "metadata": {
     "collapsed": false
@@ -819,25 +857,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 24,
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'latitude'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[249], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m media_dormitorios_por_habitacion \u001B[38;5;241m=\u001B[39m dataset_inicial\\\n\u001B[0;32m----> 2\u001B[0m     \u001B[38;5;241m.\u001B[39mgroupby(\u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mlatitude\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m)\u001B[38;5;241m.\u001B[39magg(mean(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmedian_house_value\u001B[39m\u001B[38;5;124m\"\u001B[39m) \\\n\u001B[1;32m      3\u001B[0m     \u001B[38;5;241m.\u001B[39malias(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmedian_house_value\u001B[39m\u001B[38;5;124m\"\u001B[39m))\u001B[38;5;241m.\u001B[39morderBy(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmedian_house_value\u001B[39m\u001B[38;5;124m\"\u001B[39m, ascending\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[1;32m      4\u001B[0m media_dormitorios_por_habitacion\u001B[38;5;241m.\u001B[39mshow()\n",
-      "\u001B[0;31mValueError\u001B[0m: invalid literal for int() with base 10: 'latitude'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+----------------------+\n",
+      "|housing_median_age|median_house_value_age|\n",
+      "+------------------+----------------------+\n",
+      "|              52.0|     277368.2005703422|\n",
+      "|              51.0|            244850.125|\n",
+      "|               3.0|    239450.04347826086|\n",
+      "|               4.0|     230054.1055900621|\n",
+      "|               2.0|    229438.83673469388|\n",
+      "|              48.0|    224665.25185185185|\n",
+      "|              45.0|    223464.74468085106|\n",
+      "|              25.0|     223097.2234273319|\n",
+      "|              50.0|    222513.48214285713|\n",
+      "|              49.0|     220667.6126126126|\n",
+      "|              44.0|    214909.50675675675|\n",
+      "|              22.0|      213129.173374613|\n",
+      "|              34.0|    213061.61552028218|\n",
+      "|               5.0|    211035.70854271358|\n",
+      "|              28.0|           210049.8125|\n",
+      "|              37.0|    209008.29977116705|\n",
+      "|              31.0|        208319.8515625|\n",
+      "|              36.0|    208262.42237762237|\n",
+      "|              24.0|     207293.3650385604|\n",
+      "|              32.0|              207131.5|\n",
+      "+------------------+----------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "media_dormitorios_por_habitacion = dataset_inicial\\\n",
-    "    .groupby(int(\"latitude\")).agg(mean(\"median_house_value\") \\\n",
-    "    .alias(\"median_house_value\")).orderBy(\"median_house_value\", ascending=False)\n",
-    "media_dormitorios_por_habitacion.show()"
+    "media_precio_por_edad = dataset_inicial\\\n",
+    "    .groupby('housing_median_age').agg(mean(\"median_house_value\") \\\n",
+    "    .alias(\"median_house_value_age\")).orderBy(\"median_house_value_age\", ascending=False)\n",
+    "media_precio_por_edad.show()"
    ],
    "metadata": {
     "collapsed": false
