--- a/Copia_de_Code_Test_23.ipynb
+++ b/Copia_de_Code_Test_23.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "def select_records_by_num_bedrooms_v2(df):\n",
@@ -475,7 +475,7 @@
     "                             .withColumnRenamed(\"total_rooms\", \"total_rooms_y\"))\n",
     "\n",
     "    # Se une el DataFrame original con los registros más al norte para cada grupo\n",
-    "    joined_df = dataset_inicial.join(max_latitude_by_rooms, (dataset_inicial.latitude==max_latitude_by_rooms.max_latitude) & (dataset_inicial.total_rooms == max_latitude_by_rooms.total_rooms_y), )\n",
+    "    joined_df = dataset_inicial.join(max_latitude_by_rooms, (dataset_inicial.latitude==max_latitude_by_rooms.max_latitude) & (dataset_inicial.total_rooms == max_latitude_by_rooms.total_rooms_y))\n",
     "\n",
     "    # Se selecciona solo las columnas deseadas y ordenar por número de habitaciones\n",
     "    result_df = (joined_df\n",
@@ -570,13 +570,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tiempo de ejecución de la función optimizada:  0.08734774589538574\n",
+      "Tiempo de ejecución de la función optimizada:  0.05355095863342285\n",
       "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
       "|longitude|latitude|housing_median_age|total_rooms|total_bedrooms|population|households|median_income|median_house_value|\n",
       "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
