Arreglo errores Paso 4

--- a/Copia_de_Code_Test_23.ipynb
+++ b/Copia_de_Code_Test_23.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -55,31 +55,7 @@
     "id": "g-vtskBr5mt4",
     "outputId": "ac236ce3-47b2-49b7-c651-867553416043"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/03/15 09:10:31 WARN Utils: Your hostname, LAP-120-anavarro resolves to a loopback address: 127.0.1.1; using 192.168.18.172 instead (on interface wlo1)\n",
-      "23/03/15 09:10:31 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/03/15 09:10:31 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install pyspark\n",
     "#!pip install pyspark\n",
@@ -87,21 +63,21 @@
     "from pyspark.sql import SparkSession\n",
     "\n",
     "# Create a Spark Session\n",
-    "spark = SparkSession.builder.master(\"local[*]\").getOrCreate()\n",
+    "spark = SparkSession.builder.master(\"local[*]\").config(\"spark.network.timeout\", '1000000s').getOrCreate()\n",
     "# Check Spark Session Information\n",
     "spark\n",
     "# Import a Spark function from library\n",
-    "from pyspark.sql.functions import col, max, mean"
+    "from pyspark.sql.functions import col, max, mean, abs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "outputs": [],
    "source": [
     "import time\n",
     "from matplotlib import pyplot as plt\n",
-    "import sns as sns"
+    "import seaborn as sns"
    ],
    "metadata": {
     "collapsed": false
@@ -129,7 +105,7 @@
    "metadata": {
     "id": "ArZY3tFPoknh"
    },
-   "execution_count": 4,
+   "execution_count": 65,
    "outputs": [
     {
      "name": "stdout",
@@ -177,7 +153,7 @@
    "metadata": {
     "id": "vDpVZla3okHZ"
    },
-   "execution_count": 5,
+   "execution_count": 66,
    "outputs": []
   },
   {
@@ -191,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "outputs": [],
    "source": [
     "resto_df = dataset_inicial.exceptAll(muestra_df)"
@@ -211,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "outputs": [],
    "source": [
     "muestra_and_resto = muestra_df.union(resto_df)"
@@ -231,27 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 3:>                                                          (0 + 2) / 2]\r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "No hay pérdidas ni duplicados al unir los DataFrames\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
      ]
     }
    ],
@@ -286,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "def super_plot(df1, df2):\n",
@@ -308,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 71,
    "outputs": [
     {
      "data": {
@@ -428,7 +390,7 @@
     "    for num_bedrooms in range(1, int(max_rooms) + 1):\n",
     "        # Se seleccionan los registros con el número de habitaciones actual\n",
     "        records = df.filter(col(\"total_rooms\") == num_bedrooms)\n",
-    "        selected_record = records.orderBy(\"latitude\").limit(1).collect()\n",
+    "        selected_record = records.orderBy(\"latitude\", ascending=False).limit(1).collect()\n",
     "        # Se comprueba que exista un registro para dicho número de abitación\n",
     "        if selected_record:\n",
     "            selected_record = selected_record[0]\n",
@@ -439,7 +401,7 @@
    "metadata": {
     "id": "-pYFshAQJ1dJ"
    },
-   "execution_count": 169,
+   "execution_count": 81,
    "outputs": []
   },
   {
@@ -464,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "def select_records_by_num_bedrooms_v2(df):\n",
@@ -508,13 +470,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 82,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tiempo de ejecución de la función utilizando for:  1922.5414271354675\n",
+      "Tiempo de ejecución de la función utilizando for:  2308.8546380996704\n",
       "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
       "|longitude|latitude|housing_median_age|total_rooms|total_bedrooms|population|households|median_income|median_house_value|\n",
       "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
@@ -570,13 +532,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 76,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tiempo de ejecución de la función optimizada:  0.05355095863342285\n",
+      "Tiempo de ejecución de la función optimizada:  0.03402304649353027\n",
       "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
       "|longitude|latitude|housing_median_age|total_rooms|total_bedrooms|population|households|median_income|median_house_value|\n",
       "+---------+--------+------------------+-----------+--------------+----------+----------+-------------+------------------+\n",
@@ -656,7 +618,7 @@
    "metadata": {
     "id": "wMGbHIaFfT02"
    },
-   "execution_count": 112,
+   "execution_count": 77,
    "outputs": [
     {
      "name": "stdout",
@@ -734,36 +696,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 78,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------+-------------------+\n",
-      "|total_bedrooms|         diferencia|\n",
-      "+--------------+-------------------+\n",
-      "|        1856.0| -4.979999999999997|\n",
-      "|        1655.0| -4.899999999999999|\n",
-      "|        1324.0| -4.899999999999999|\n",
-      "|        1039.0| -4.630000000000003|\n",
-      "|        1542.0| -4.580000000000005|\n",
-      "|        1158.0| -4.479999999999997|\n",
-      "|          19.0| -4.240000000000002|\n",
-      "|          31.0| -4.229999999999997|\n",
-      "|        1893.0| -4.130000000000003|\n",
-      "|         858.0| -4.048333333333339|\n",
-      "|        1110.0| -4.035000000000004|\n",
-      "|        1213.0|-3.9299999999999997|\n",
-      "|         992.0|-3.9279999999999973|\n",
-      "|        1914.0|-3.8900000000000006|\n",
-      "|         714.0| -3.865000000000002|\n",
-      "|         117.0|-3.7674999999999983|\n",
-      "|        1575.0| -3.719999999999999|\n",
-      "|        1050.0|-3.6099999999999994|\n",
-      "|         870.0| -3.604999999999997|\n",
-      "|         907.0| -3.520000000000003|\n",
-      "+--------------+-------------------+\n",
+      "+--------------+-----------------+\n",
+      "|total_bedrooms|       diferencia|\n",
+      "+--------------+-----------------+\n",
+      "|         679.0|          6.65625|\n",
+      "|         828.0|5.791666666666664|\n",
+      "|        1189.0|5.779999999999994|\n",
+      "|         880.0|5.513333333333335|\n",
+      "|         789.0|5.396666666666661|\n",
+      "|         503.0|5.323333333333338|\n",
+      "|         944.0|5.030000000000001|\n",
+      "|        1856.0|4.979999999999997|\n",
+      "|        1324.0|4.899999999999999|\n",
+      "|        1655.0|4.899999999999999|\n",
+      "|        1593.0|4.759999999999998|\n",
+      "|         584.0|4.734999999999999|\n",
+      "|        1039.0|4.630000000000003|\n",
+      "|        1913.0|4.630000000000003|\n",
+      "|         928.0|4.603333333333339|\n",
+      "|        1470.0|4.600000000000001|\n",
+      "|        1542.0|4.580000000000005|\n",
+      "|        1252.0|4.530000000000001|\n",
+      "|        1158.0|4.479999999999997|\n",
+      "|         677.0|4.326666666666668|\n",
+      "+--------------+-----------------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
@@ -771,7 +733,7 @@
    ],
    "source": [
     "diferencias = media_muestra.join(media_resto, \"total_bedrooms\") \\\n",
-    "    .withColumn(\"diferencia\", col(\"mean_latitude_muestra\") - col(\"mean_latitude_resto\")) \\\n",
+    "    .withColumn(\"diferencia\", abs(col(\"mean_latitude_muestra\") - col(\"mean_latitude_resto\"))) \\\n",
     "    .orderBy(\"diferencia\", ascending=False) \\\n",
     "    .select(\"total_bedrooms\", \"diferencia\")\n",
     "diferencias.show()"
@@ -801,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 79,
    "outputs": [
     {
      "name": "stdout",
@@ -857,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "outputs": [
     {
      "name": "stdout",
