Arreglo errores Paso 4

--- a/Copia_de_Code_Test_23.ipynb
+++ b/Copia_de_Code_Test_23.ipynb
@@ -462,7 +462,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Iterando con un for. NO RECOMENDADO USAR ESTA CELDA, TARDA: 1922.5414271354675"
+    "Iterando con un for. NO RECOMENDADO USAR ESTA CELDA, TARDA DEMASIADO"
    ],
    "metadata": {
     "collapsed": false
