Arreglo errores Paso 4

--- a/Copia_de_Code_Test_23.ipynb
+++ b/Copia_de_Code_Test_23.ipynb
@@ -800,8 +800,10 @@
    ],
    "source": [
     "media_dormitorios_por_habitacion = dataset_inicial \\\n",
-    "    .groupby(\"total_rooms\").agg(mean(\"total_bedrooms\") \\\n",
-    "    .alias(\"media_dormitorios\")).orderBy(\"total_rooms\", ascending=False)\n",
+    "    .groupby(\"total_rooms\")\\\n",
+    "    .agg(mean(\"total_bedrooms\") \\\n",
+    "    .alias(\"media_dormitorios\"))\\\n",
+    "    .orderBy(\"total_rooms\", ascending=False)\n",
     "media_dormitorios_por_habitacion.show()"
    ],
    "metadata": {
@@ -856,8 +858,10 @@
    ],
    "source": [
     "media_precio_por_edad = dataset_inicial\\\n",
-    "    .groupby('housing_median_age').agg(mean(\"median_house_value\") \\\n",
-    "    .alias(\"median_house_value_age\")).orderBy(\"median_house_value_age\", ascending=False)\n",
+    "    .groupby('housing_median_age')\\\n",
+    "    .agg(mean(\"median_house_value\") \\\n",
+    "    .alias(\"median_house_value_age\"))\\\n",
+    "    .orderBy(\"median_house_value_age\", ascending=False)\n",
     "media_precio_por_edad.show()"
    ],
    "metadata": {
